AssignmtDataLoader1/src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Client_Code__c</fullName>
        <displayFormat>CL{0000}</displayFormat>
        <label>Client Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Discription__c</fullName>
        <label>Discription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <label>Point of Contact</label>
        <type>TextArea</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <recordTypes>
        <fullName>ClientRecordtype</fullName>
        <active>true</active>
        <label>ClientRecordtype</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>